extensions/wikia/WikiaInteractiveMaps/css/WikiaMaps.wikiamobile.scss
@import "WikiaMapsShared";
@import "includes/wikia/services/css/pagination.scss";
@import "skins/shared/mixins/box-sizing-border-box";
@import "extensions/wikia/WikiaMobile/css/variables.scss";
@import "skins/shared/mixins/flexbox.scss";

$nav-height: 40px;
$smart-banner-height: 80px;
$map-ad-height: 70px;

.error {
	padding: 0 15px;
}

.smartbanner {
	display: none;
}

.wikia-interactive-map-wrapper {
	@include flexbox();
	@include flex-direction(column);

	background-color: #fff;
	bottom: 0;
	left: 0;
	position: absolute;
	top: $nav-height;
	width: 100%;
}

.wikia-interactive-map {
	@include flex-grow(1);

	margin: 0;
	position: relative;
	width: 100%;

	iframe {
		border: none;
		height: 100%;
		margin: 0;
		position: absolute;
		top: 0;
		width: 100% !important;
	}
}

.int-map-mobile-map-page {
	.WikiaPageHeader {
		display: none;
	}

	// required to be displayed over #wkPage which needs to occupy entire window - header and smartbanner.
	// tried to set #wkPage using calc() but Android < 4.4 doesn't support it
	#wkTopNav {
		z-index: $highest-z-index + 1;
	}
}

.map-list {
	list-style: none;
	margin: 0;
	padding: 0;

	a {
		display: block;
		line-height: 0;
		margin: 0;
		padding: 0;
	}

	h3 {
		@include map-thumb-title($content-color, $gradient-color-start, $map-item-mobile-max-width);
		line-height: 20px;
	}

	li {
		margin: 0px 0px 1px;
		overflow: hidden;
		position: relative;

		img {
			height: auto;
			width: 100%;
		}
	}
}

.no-maps {
	padding: 0 15px;
}

.Pagination {
	margin: 6.5% 0;

	li {
		border: 0;

		a {
			border-radius: 5px;
			display: block-inline;
			font-size: 1.2em;
			line-height: 1.2em;
			padding: 1.2em;
			text-align: center;
			vertical-align: middle;
		}
	}
}

